--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@react-native-picker/picker": "^2.11.4",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.4.0",
+    "@viro-community/react-viro": "^2.41.1",
     "expo": "~54.0.18",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-permissions": "^5.4.4",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-voice": "^0.3.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
